--- a/src/languages/zh_CN/card/support.css
+++ b/src/languages/zh_CN/card/support.css
@@ -1,239 +1,197 @@
-@font-face {
-    font-family: cardFont;
-    src: url("_NotoSerifSC-Regular.otf");
-}
-
-@font-face {
-    font-family: cardFontAlt;
-    src: url("_NotoSerifTC-Regular.otf");
-}
-
-body {
-    margin: 0px;
-    padding: 0px;
-}
-
-main.container {
-    margin: 0px;
-    padding: 0px;
-    width: 100vw;
-}
-
-main.container #qa {
-    margin-top: 0px;
-}
-
-
-main.container .card {
-    min-height: calc(100vh - 240px);
-}
-
-
-main.container .card audio {
-    width: 150px;
-}
-
-#content {
-    margin: 0px;
-}
-
-.card,
-.card * {
-    box-sizing: border-box;
-    padding: 0px;
-    margin: 0px;
-    font-family: cardFont, sans-serif;
-
-}
-
-.card {
-    background: #e5f9ff;
-    font-size: 18px;
-    font-smooth: always;
-    color: rgb(40, 40, 50);
-    height: 100vh;
-    width: 100vw;
-}
-
-.migaku-header {
-    background: #2880ff;
-    text-align: center;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.migaku-header h1 {
-    color: white;
-}
-
-.migaku-logo {
-    height: 35px;
-    margin: 5px;
-}
-
-.migaku-card {
+.word {
     position: relative;
-    background: white;
-    width: 90vw;
-    max-width: 650px;
-    margin: 20px auto 50px;
-    border-radius: 10px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15);
+}
+
+
+.popup {
+    display: none;
+    position: absolute;
+
+    z-index: 100;
+
+    padding: 7px;
+    border-radius: 5px;
+
     text-align: left;
+
+    background-color: #ffffff;
+    box-shadow: rgba(0, 0, 0, .35) 0 5px 15px;
 }
 
-.migaku-card-front .migaku-card-content {
-    padding: 20px;
-    text-align: center;
-    font-size: 22px;
+.nightMode .popup,
+.ankidroid_dark_mode .popup {
+    color: #ffffff;
+    background-color: #2f2f31
 }
 
-.migaku-card-back .migaku-card-content {
-    padding: 15px;
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    position: relative;
+.popup-active .popup {
+    display: block;
 }
 
-.migaku-indented {
-    margin-left: 5%;
+.popup-direction-u .popup {
+    left: 0;
+    bottom: calc(100% + 14px);
 }
 
-.sentence-separator {
-    width: 100%;
-    margin: 15px 0px;
-    border-color: rgb(220, 220, 220);
+.popup-direction-d .popup {
+    left: 0;
+    top: calc(100% + 14px);
 }
 
-.migaku-card-sentence {
-    font-size: 24px;
-    text-align: center;
-    width: 100%;
-    margin-top: 10px;
+.popup-direction-l .popup {
+    right: calc(100% + 14px);
+    top: 0;
 }
 
-.migaku-card-unknown {
-    margin-top: 10px;
-    font-size: 24px;
+.popup-direction-r .popup {
+    left: calc(100% + 14px);
+    top: 0;
 }
 
-.migaku-card-translation,
-.migaku-card-examples {
-    color: rgba(30, 30, 55, .7);
+.popup-direction-u .popup:after {
+    content: " ";
+    position: absolute;
+    left: 5px;
+    bottom: -10px;
+    border-top: 10px solid #ffffff;
+    border-right: 10px solid transparent;
+    border-left: 10px solid transparent;
+    border-bottom: none;
 }
 
-.migaku-card-translation, .migaku-card-sentence-audio {
-    text-align: center;
-    width: 100%;
+.nightMode .popup-direction-u .popup:after,
+.ankidroid_dark_mode .popup-direction-u .popup:after {
+    border-top: 10px solid #2f2f31;
 }
 
-.migaku-card-sentence-audio, .migaku-card-unknown-audio {
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
+.popup-direction-d .popup:after {
+    content: " ";
+    position: absolute;
+    left: 5px;
+    top: -10px;
+    border-top: none;
+    border-right: 10px solid transparent;
+    border-left: 10px solid transparent;
+    border-bottom: 10px solid #ffffff;
 }
 
-.migaku-card-sentence-audio {
-    justify-content: center;
+.nightMode .popup-direction-d .popup:after,
+.ankidroid_dark_mode .popup-direction-d .popup:after {
+    border-bottom: 10px solid #2f2f31;
 }
 
-.migaku-card-screenshot, .migaku-card-images {
-    position: relative;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-    align-items: end;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    overflow: hidden;
-    justify-items: center;
+.popup-direction-l .popup:after {
+    content: " ";
+    position: absolute;
+    right: -10px;
+    top: 5px;
+    border-top: 10px solid transparent;
+    border-right: none;
+    border-left: 10px solid #ffffff;
+    border-bottom: 10px solid transparent;
 }
 
-.migaku-card-screenshot br, .migaku-card-images br {
+.nightMode .popup-direction-l .popup:after,
+.ankidroid_dark_mode .popup-direction-l .popup:after {
+    border-left: 10px solid #2f2f31;
+}
+
+.popup-direction-r .popup:after {
+    content: " ";
+    position: absolute;
+    left: -10px;
+    top: 5px;
+    border-top: 10px solid transparent;
+    border-right: 10px solid #ffffff;
+    border-left: none;
+    border-bottom: 10px solid transparent;
+}
+
+.nightMode .popup-direction-r .popup:after,
+.ankidroid_dark_mode .popup-direction-r .popup:after {
+    border-right: 10px solid #2f2f31;
+}
+
+
+.popup-hover-box {
     display: none;
 }
 
-.migaku-card-images {
-    border-top-left-radius: 0px;
-    border-top-right-radius: 0px;
-    margin: auto;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    grid-gap: 5px;
-    grid-template-columns: auto auto auto auto;
+.popup-active .popup-hover-box {
+    display: block;
+    position: absolute;
+
+    z-index: 50;
 }
 
-.migaku-card-screenshot img {
-    max-width: 100%;
-    max-height: 365px;
+.popup-direction-u .popup-hover-box {
+    left: 0;
+    bottom: 100%;
+    width: 100%;
+    height: calc(14px + 5px);
 }
 
-.migaku-card-images img {
-    max-width: 100%;
-    max-height: 125px;
-
+.popup-direction-d .popup-hover-box {
+    left: 0;
+    top: 100%;
+    width: 100%;
+    height: calc(14px + 5px);
 }
 
-.migaku-card-examples {
-    margin-bottom: 15px;
+.popup-direction-l .popup-hover-box {
+    top: 0;
+    right: 100%;
+    width: calc(14px + 5px);
+    height: 100%;
 }
 
-
-.ankidroid_dark_mode .migaku-header,
-.nightMode .migaku-header {
-    background: #f9a746;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-}
-
-.ankidroid_dark_mode.card,
-.nightMode.card {
-    color: rgb(245, 245, 255);
-    background: #2b303b;
-}
-
-.ankidroid_dark_mode .migaku-card-translation,
-.nightMode.card .migaku-card-translation,
-.ankidroid_dark_mode .migaku-card-examples,
-.nightMode.card .migaku-card-examples {
-    color: rgba(230, 230, 255, .65);
+.popup-direction-r .popup-hover-box {
+    top: 0;
+    left: 100%;
+    width: calc(14px + 5px);
+    height: 100%;
 }
 
 
-
-.ankidroid_dark_mode .migaku-card,
-.nightMode .migaku-card {
-    background: #363c4a;
-    box-shadow: 4px 0px 15px rgba(0, 0, 0, 0.15);
+.tone-1,
+.word.active .tone-hover-1 {
+    color: #E60000;
 }
 
-.ankidroid_dark_mode .sentence-separator,
-.nightMode .sentence-separator {
-    border-color: rgb(175, 175, 175);
+.tone-2,
+.word.active .tone-hover-2 {
+    color: #E68A00;
 }
 
-.replay-button {
-    height: 25px;
+.tone-3,
+.word.active .tone-hover-3 {
+    color: #00802B;
 }
 
-.playImage {
-    height: 30px !important;
-    width: 30px !important;
-    margin-right: 4px;
+.tone-4,
+.word.active .tone-hover-4 {
+    color: #005CE6;
 }
 
-@media (min-width: 762px) {
-    .migaku-header {
-        justify-content: start;
-        padding-left: 20px;
-    }
+/*.tone-5,
+.word.active .tone-hover-5 {
+    color: #AC00E6;
+}*/
+
+.tone-5,
+.word.active .tone-hover-5 {
+    color: #808080;
 }
 
-@media only screen and (max-width: 768px) {
 
-    /* For mobile phones: */
-    .migaku-card {
-        width: 96vw;
-    }
+.reading-invisible rt {
+    visibility: hidden;
+}
+
+.reading-hover rt {
+    visibility: hidden;
+}
+
+.reading-hover.active rt {
+    visibility: visible;
 }
